// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CommentingStatus Basic render 1`] = `
<div
  class="commenting-status"
>
  <div
    class="commenting-status-inner-content"
  >
    <div
      class="flex-row comment-status-img"
    >
      <img
        class="comment-status-icon"
        src="/svgs/project/comment-status.svg"
      />
    </div>
    <div
      class="flex-row"
    />
  </div>
</div>
`;

exports[`CommentingStatus Children added 1`] = `
<div
  class="commenting-status"
>
  <div
    class="commenting-status-inner-content"
  >
    <div
      class="flex-row comment-status-img"
    >
      <img
        class="comment-status-icon"
        src="/svgs/project/comment-status.svg"
      />
    </div>
    <div
      class="flex-row"
    >
      <img
        class="myChildDiv"
      />
    </div>
  </div>
</div>
`;

exports[`CommentingStatus ClassNames added 1`] = `
<div
  class="commenting-status class1"
>
  <div
    class="commenting-status-inner-content class2"
  >
    <div
      class="flex-row comment-status-img"
    >
      <img
        class="comment-status-icon"
        src="/svgs/project/comment-status.svg"
      />
    </div>
    <div
      class="flex-row"
    />
  </div>
</div>
`;
